# empty-cmake-project

./: CMakeLists.txt  README.md  tools.sh
src/: hello.cpp
